--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
 
     <!--Add your Firsebase Config here below. -->
+    <script> 
+    const firebaseConfig = {
+  apiKey: "AIzaSyCff8Nf8KkSYSocBjc5R_faN35BGpoewH0",
+  authDomain: "class-35-583f8.firebaseapp.com",
+  databaseURL: "https://class-35-583f8-default-rtdb.firebaseio.com",
+  projectId: "class-35-583f8",
+  storageBucket: "class-35-583f8.appspot.com",
+  messagingSenderId: "167385506563",
+  appId: "1:167385506563:web:bbbf51d9d5d5ffabcdff36"
+};
+
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+    </script>
 
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
